# rusty-chip8

./: Cargo.toml  README.md  log.txt  test.rs
src/: .cpu.rs.swp  .display.rs.swp  chip8.rs  cpu.rs  display.rs  lib.rs  log.txt  main.rs  sprite.rs
