[package]
name = "chip8-rust"
version = "0.1.0"
authors = ["Oneeb Malik <onee@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.32"

[features]
default = []
use_sdl2_mac_framework = ["sdl2/use_mac_framework"]
